--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,14 @@
     <meta name="author" content="" />
     <title>GFCAAA</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/assets/img/favicon/safari-pinned-tab.svg" color="#000000">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
@@ -48,10 +55,11 @@
                     <h1 class="text-uppercase text-white font-weight-bold">Georgia FIRST Collegiate Alumni and Advocacy
                         Alliance
                     </h1>
-                    <hr class="divider my-4" />
+                    <hr class="divider divider-red my-4" />
                 </div>
                 <div class="col-lg-8 align-self-baseline">
-                    <p class="text-white-75 font-weight-light mb-5">MORE INFO SECTION HERE</p>
+                    <p class="text-white-75 font-weight-light mb-5">Inspiring Teams | Engaging Alumni | Connecting
+                        Mentors</p>
                     <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Learn More</a>
                 </div>
             </div>
@@ -64,7 +72,9 @@
                 <div class="col-lg-8 text-center">
                     <h2 class="text-white mt-0">Spreading the love for STEM, one club at a time!</h2>
                     <hr class="divider light my-4" />
-                    <p class="text-white-50 mb-4">SHORT DESCRIPTION HERE</p>
+                    <p class="text-white-50 mb-4">Georgia FIRST Collegiate Alumni and Advocacy Alliance is an
+                        organization with the goal of engaging FIRST Alumni and those interested in FIRST with the
+                        Georgia FIRST community</p>
                     <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
                 </div>
             </div>
@@ -73,40 +83,46 @@
     <!-- Services-->
     <section class="page-section" id="services">
         <div class="container">
-            <h2 class="text-center mt-0">Different Ways to Get Involved</h2>
-            <hr class="divider my-4" />
+            <h2 class="text-center mt-0">Fields to Get Involved In</h2>
+            <hr class="divider divider-red my-4" />
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
-                        <i class="fas fa-4x fa-tools text-primary mb-4"></i>
+                        <i class="fas fa-4x fa-tools text-danger mb-4"></i>
                         <h3 class="h4 mb-2">Engineering</h3>
-                        <p class="text-muted mb-0">Engineering blurb</p>
+                        <p class="text-muted mb-0">Design, model, and create robots from scratch</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
-                        <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
+                        <i class="fas fa-4x fa-laptop-code text-danger mb-4"></i>
                         <h3 class="h4 mb-2">Programming</h3>
-                        <p class="text-muted mb-0">Programming blurb</p>
+                        <p class="text-muted mb-0">Program manual and autonomous robot control</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
-                        <i class="fas fa-4x fa-poll text-primary mb-4"></i>
+                        <i class="fas fa-4x fa-poll text-danger mb-4"></i>
+                        <h3 class="h4 mb-2">Electronics</h3>
+                        <p class="text-muted mb-0">Wire, connect, and plumb the robot from scratch</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-5">
+                        <i class="fas fa-4x fa-tasks text-danger mb-4"></i>
                         <h3 class="h4 mb-2">Marketing</h3>
-                        <p class="text-muted mb-0">Marketing blurb</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="mt-5">
-                        <i class="fas fa-4x fa-tasks text-primary mb-4"></i>
-                        <h3 class="h4 mb-2">Project Management</h3>
-                        <p class="text-muted mb-0">Project management and leadership blurb</p>
+                        <p class="text-muted mb-0">Develop implement efficient marketing solutions</p>
                     </div>
                 </div>
             </div>
-            <hr class="divider my-4" />
+            <hr class="divider divider-red my-4" />
             <h2 class="text-center mt-0">... and more!</h2>
+            <br>
+            <div class="row">
+                <div class="col-sm text-center">
+                    <h7 class="text-muted">Project Management - Media - Game Strategy</h7>
+                </div>
+            </div>
         </div>
     </section>
     <!-- Portfolio-->
@@ -117,8 +133,8 @@
                     <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg">
                         <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
                         <div class="portfolio-box-caption">
-                            <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
+                            <div class="project-category text-white-50">Engineering</div>
+                            <div class="project-name">Fabrication</div>
                         </div>
                     </a>
                 </div>
@@ -126,8 +142,8 @@
                     <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg">
                         <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="" />
                         <div class="portfolio-box-caption">
-                            <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
+                            <div class="project-category text-white-50">Programming</div>
+                            <div class="project-name">Robot & Software Development</div>
                         </div>
                     </a>
                 </div>
@@ -135,8 +151,8 @@
                     <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg">
                         <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="" />
                         <div class="portfolio-box-caption">
-                            <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
+                            <div class="project-category text-white-50">Electrical</div>
+                            <div class="project-name">Wiring & Plumbing</div>
                         </div>
                     </a>
                 </div>
@@ -144,8 +160,8 @@
                     <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg">
                         <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="" />
                         <div class="portfolio-box-caption">
-                            <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
+                            <div class="project-category text-white-50">Marketing</div>
+                            <div class="project-name">Social Media Marketing</div>
                         </div>
                     </a>
                 </div>
@@ -153,8 +169,8 @@
                     <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg">
                         <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="" />
                         <div class="portfolio-box-caption">
-                            <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
+                            <div class="project-category text-white-50">Game Strategy</div>
+                            <div class="project-name">Strategy</div>
                         </div>
                     </a>
                 </div>
@@ -162,8 +178,8 @@
                     <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg">
                         <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="" />
                         <div class="portfolio-box-caption p-3">
-                            <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
+                            <div class="project-category text-white-50">Management</div>
+                            <div class="project-name">Project Management & Leadership</div>
                         </div>
                     </a>
                 </div>
@@ -171,10 +187,10 @@
         </div>
     </div>
     <!-- Call to action-->
-    <section class="page-section bg-dark text-white">
+    <section class="page-section bg-red text-white">
         <div class="container text-center">
-            <h2 class="mb-4">Start Your Own Club!</h2>
-            <a class="btn btn-light btn-xl" href="https://startbootstrap.com/themes/creative/">Club Starter Kit</a>
+            <h2 class="mb-4">Join the Alliance and Start Your Own Club!</h2>
+            <a class="btn btn-light btn-xl" href="#">Club Starter Kit</a>
         </div>
     </section>
     <!-- Contact-->
@@ -183,20 +199,17 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8 text-center">
                     <h2 class="mt-0">Let's Get In Touch!</h2>
-                    <hr class="divider my-4" />
-                    <p class="text-muted mb-5">Ready to start your next project with us? Give us a call or send us an
+                    <hr class="divider divider-red my-4" />
+                    <p class="text-muted mb-5">Ready to start your own club or want to get involved? send us an
                         email and we will get back to you as soon as possible!</p>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-                    <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-                    <div>+1 (555) 123-4567</div>
-                </div>
-                <div class="col-lg-4 mr-auto text-center">
-                    <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
+            <div class="container">
+
+                <div class=" mr-auto text-center">
+                    <i class="fas fa-envelope fa-3x mb-3 text-danger"></i>
                     <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
-                    <a class="d-block" href="mailto:contact@yourwebsite.com">contact@yourwebsite.com</a>
+                    <a class="d-block" href="mailto:gfcaaa@gmail.com">CGFCAAA@gmail.com</a>
                 </div>
             </div>
         </div>
