fixed broken assets link

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
         <div class="container-fluid p-0">
             <div class="row no-gutters">
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
+                    <a class="portfolio-box" href="/assets/img/portfolio/fullsize/1.jpg">
+                        <img class="img-fluid" src="/assets/img/portfolio/thumbnails/1.jpg" alt="" />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Engineering</div>
                             <div class="project-name">Fabrication</div>
@@ -139,8 +139,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="" />
+                    <a class="portfolio-box" href="/assets/img/portfolio/fullsize/2.jpg">
+                        <img class="img-fluid" src="/assets/img/portfolio/thumbnails/2.jpg" alt="" />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Programming</div>
                             <div class="project-name">Robot & Software Development</div>
@@ -148,8 +148,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="" />
+                    <a class="portfolio-box" href="/assets/img/portfolio/fullsize/3.jpg">
+                        <img class="img-fluid" src="/assets/img/portfolio/thumbnails/3.jpg" alt="" />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Electrical</div>
                             <div class="project-name">Wiring & Plumbing</div>
@@ -157,8 +157,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="" />
+                    <a class="portfolio-box" href="/assets/img/portfolio/fullsize/4.jpg">
+                        <img class="img-fluid" src="/assets/img/portfolio/thumbnails/4.jpg" alt="" />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Marketing</div>
                             <div class="project-name">Social Media Marketing</div>
@@ -166,8 +166,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="" />
+                    <a class="portfolio-box" href="/assets/img/portfolio/fullsize/5.jpg">
+                        <img class="img-fluid" src="/assets/img/portfolio/thumbnails/5.jpg" alt="" />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Game Strategy</div>
                             <div class="project-name">Strategy</div>
@@ -175,8 +175,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="" />
+                    <a class="portfolio-box" href="/assets/img/portfolio/fullsize/6.jpg">
+                        <img class="img-fluid" src="/assets/img/portfolio/thumbnails/6.jpg" alt="" />
                         <div class="portfolio-box-caption p-3">
                             <div class="project-category text-white-50">Management</div>
                             <div class="project-name">Project Management & Leadership</div>
@@ -227,7 +227,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
     <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+    <script src="/js/scripts.js"></script>
 </body>
 
 </html>
