--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto my-2 my-lg-0">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Fields</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Media</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
                 </ul>
@@ -111,7 +111,7 @@
                     <div class="mt-5">
                         <i class="fas fa-4x fa-tasks text-danger mb-4"></i>
                         <h3 class="h4 mb-2">Marketing</h3>
-                        <p class="text-muted mb-0">Develop implement efficient marketing solutions</p>
+                        <p class="text-muted mb-0">Develop and implement efficient marketing solutions</p>
                     </div>
                 </div>
             </div>
@@ -200,7 +200,7 @@
                 <div class="col-lg-8 text-center">
                     <h2 class="mt-0">Let's Get In Touch!</h2>
                     <hr class="divider divider-red my-4" />
-                    <p class="text-muted mb-5">Ready to start your own club or want to get involved? send us an
+                    <p class="text-muted mb-5">Ready to start your own club or want to get involved? Send us an
                         email and we will get back to you as soon as possible!</p>
                 </div>
             </div>
@@ -209,7 +209,7 @@
                 <div class=" mr-auto text-center">
                     <i class="fas fa-envelope fa-3x mb-3 text-danger"></i>
                     <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
-                    <a class="d-block" href="mailto:gfcaaa@gmail.com">CGFCAAA@gmail.com</a>
+                    <a class="d-block" href="mailto:gfcaaa@gmail.com">GFCAAA@gmail.com</a>
                 </div>
             </div>
         </div>
