--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Emory Robotics</title>
+    <title>GFCAAA</title>
     <!-- Favicon-->
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png">
@@ -33,7 +33,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">Emory Robotics</a>
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">GFCAAA</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -52,11 +52,13 @@
         <div class="container h-100">
             <div class="row h-100 align-items-center justify-content-center text-center">
                 <div class="col-lg-10 align-self-end">
-                    <h1 class="text-uppercase text-white font-weight-bold">Emory Robotics Club</h1>
+                    <h1 class="text-uppercase text-white font-weight-bold">Georgia FIRST Collegiate Alumni and Advocacy
+                        Alliance
+                    </h1>
                     <hr class="divider divider-red my-4" />
                 </div>
                 <div class="col-lg-8 align-self-baseline">
-                    <p class="text-white-75 font-weight-light mb-5">Inspiring Students | Engaging Alumni | Connecting
+                    <p class="text-white-75 font-weight-light mb-5">Inspiring Teams | Engaging Alumni | Connecting
                         Mentors</p>
                     <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Learn More</a>
                 </div>
@@ -70,7 +72,9 @@
                 <div class="col-lg-8 text-center">
                     <h2 class="text-white mt-0">Spreading the love for STEM, one club at a time!</h2>
                     <hr class="divider light my-4" />
-                    <p class="text-white-50 mb-4">The Emory Robotics Club works to connect students to a wide variety of careers including Engineering, Computer Science, Business, Marketing, and Management! In addition to providing resources and support for students, the Emory Robotics Club works to connect students with FIRST Robotics Teams and Organizations to gain real-world experience in the field they choose.</p>
+                    <p class="text-white-50 mb-4">Georgia FIRST Collegiate Alumni and Advocacy Alliance is an
+                        organization with the goal of engaging FIRST Alumni and those interested in FIRST with the
+                        Georgia FIRST community</p>
                     <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
                 </div>
             </div>
@@ -185,8 +189,8 @@
     <!-- Call to action-->
     <section class="page-section bg-red text-white">
         <div class="container text-center">
-            <h2 class="mb-4">Learn more about the FIRST Robotics Advocacy Alliance</h2>
-            <a class="btn btn-light btn-xl" href="https://gfcaaa.github.io">Georgia FIRST Robotics Advocacy Alliance</a>
+            <h2 class="mb-4">Join the Alliance and Start Your Own Club!</h2>
+            <a class="btn btn-light btn-xl" href="#">Club Starter Kit</a>
         </div>
     </section>
     <!-- Contact-->
@@ -196,7 +200,7 @@
                 <div class="col-lg-8 text-center">
                     <h2 class="mt-0">Let's Get In Touch!</h2>
                     <hr class="divider divider-red my-4" />
-                    <p class="text-muted mb-5">Want to learn more about the club or how to join? Send us an
+                    <p class="text-muted mb-5">Ready to start your own club or want to get involved? Send us an
                         email and we will get back to you as soon as possible!</p>
                 </div>
             </div>
@@ -205,7 +209,7 @@
                 <div class=" mr-auto text-center">
                     <i class="fas fa-envelope fa-3x mb-3 text-danger"></i>
                     <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
-                    <a class="d-block" href="mailto:gfcaaa@gmail.com">robotics.emory@gmail.com</a>
+                    <a class="d-block" href="mailto:gfcaaa@gmail.com">GFCAAA@gmail.com</a>
                 </div>
             </div>
         </div>
@@ -213,7 +217,7 @@
     <!-- Footer-->
     <footer class="bg-light py-5">
         <div class="container">
-            <div class="small text-center text-muted">Copyright © 2020 - Emory Robotics</div>
+            <div class="small text-center text-muted">Copyright © 2020 - GFCAAA</div>
         </div>
     </footer>
     <!-- Bootstrap core JS-->
